--- a/apps/happin-web/styles/plugins.scss
+++ b/apps/happin-web/styles/plugins.scss
@@ -1,4 +1,3 @@
-@import "~emoji-mart/css/emoji-mart.css";
 /* Slider */
 .slick-slider {
   position: relative;
@@ -128,6 +127,9 @@
   z-index: 1;
   &.slick-disabled {
     opacity: .25;
+    &:hover {
+      background: rgba(#000, .5);
+    }
   }
 }
 
@@ -226,19 +228,4 @@
       left: 24px;
     }
   }
-}
-
-
-// emoji
-.emoji-mart-anchor-icon svg {
-  margin: 0 auto;
-}
-
-
-//react-spring-bottom-sheet
-
-:root {
-  --rsbs-backdrop-bg: rgba(0, 0, 0, 0);
-  --rsbs-bg: theme('colors.gray.800');
-  --rsbs-handle-bg: rgba(255, 255, 255, .4);
 }
