add livestream, playback, inviteUser

--- a/apps/happin-web/styles/plugins.scss
+++ b/apps/happin-web/styles/plugins.scss
@@ -1,3 +1,4 @@
+@import "~emoji-mart/css/emoji-mart.css";
 /* Slider */
 .slick-slider {
   position: relative;
@@ -228,4 +229,19 @@
       left: 24px;
     }
   }
+}
+
+
+// emoji
+.emoji-mart-anchor-icon svg {
+  margin: 0 auto;
+}
+
+
+//react-spring-bottom-sheet
+
+:root {
+  --rsbs-backdrop-bg: rgba(0, 0, 0, 0);
+  --rsbs-bg: theme('colors.gray.800');
+  --rsbs-handle-bg: rgba(255, 255, 255, .4);
 }
