--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -352,3 +352,38 @@ textarea.form-field {
 .tickets-cover__qrcode {
   @apply flex items-center justify-center sm:w-1/3 sm:h-full px-5 sm:pl-5 sm:pr-7 pb-5 pt-4 sm:py-0;
 }
+
+
+// text Editor
+
+.tox .tox-menubar {
+  background-color: #121212 !important;
+}
+
+.tox .tox-mbtn {
+  color: white !important;
+
+}
+
+.tox-tinymce {
+  border-radius: 0.5rem !important;
+  border-color: rgb(69 69 69) !important;
+  border-width: 2px !important;
+  margin-top: 0.25rem;
+}
+.tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary{
+  background-color: #121212 !important;
+}
+.tox .tox-tbtn svg {
+  fill: white !important;
+}
+
+.tox .tox-statusbar {
+  color: white !important;
+  background-color: #121212 !important;
+}
+
+// .tox .tox-edit-area__iframe {
+//   background-color: #121212 !important;
+//   color: white !important;
+// }
