--- a/apps/happin-web/styles/plugins.scss
+++ b/apps/happin-web/styles/plugins.scss
@@ -239,9 +239,11 @@
 
 
 //react-spring-bottom-sheet
-
 :root {
   --rsbs-backdrop-bg: rgba(0, 0, 0, 0);
   --rsbs-bg: theme('colors.gray.800');
   --rsbs-handle-bg: rgba(255, 255, 255, .4);
+}
+[data-rsbs-header] {
+  padding-bottom: 16px !important;
 }
