Complete the logic and functionality of all collection event pages

--- a/apps/happin-web/styles/globals.scss
+++ b/apps/happin-web/styles/globals.scss
@@ -15,7 +15,7 @@
 @font-face {
   font-family: proximanova;
   font-weight: 500;
-  font-display: swap;
+  font-display: fallback;
   src: url("../public/fonts/proximanova/proximanova-semibold-webfont.woff2")
       format("woff2"),
     url("../public/fonts/proximanova/proximanova-semibold-webfont.woff")
@@ -24,7 +24,7 @@
 @font-face {
   font-family: proximanova;
   font-weight: 600;
-  font-display: swap;
+  font-display: fallback;
   src: url("../public/fonts/proximanova/proximanova-bold-webfont.woff2")
       format("woff2"),
     url("../public/fonts/proximanova/proximanova-bold-webfont.woff")
@@ -33,7 +33,7 @@
 @font-face {
   font-family: proximanova;
   font-weight: 700;
-  font-display: swap;
+  font-display: fallback;
   src: url("../public/fonts/proximanova/proximanova-extrabold-webfont.woff2")
       format("woff2"),
     url("../public/fonts/proximanova/proximanova-extrabold-webfont.woff")
@@ -42,7 +42,7 @@
 @font-face {
   font-family: proximanova;
   font-weight: 800;
-  font-display: swap;
+  font-display: fallback;
   src: url("../public/fonts/proximanova/proximanova-black-webfont.woff2")
       format("woff2"),
     url("../public/fonts/proximanova/proximanova-black-webfont.woff")
@@ -62,14 +62,14 @@
 //@font-face {
 //  font-family: "Helvetica Neue";
 //  font-weight: 400;
-//  font-display: swap;
+//  font-display: fallback;
 //  src: url("../public/fonts/helvetica/helveticaneue.ttf") format("truetype"),
 //    url("../public/fonts/helvetica/helveticaneue.ttf") format("truetype");
 //}
 //@font-face {
 //  font-family: "Helvetica Neue";
 //  font-weight: 700;
-//  font-display: swap;
+//  font-display: fallback;
 //  src: url("../public/fonts/helvetica/Helvetica Neue LT 75 Bold.ttf")
 //      format("truetype"),
 //    url("../public/fonts/helvetica/Helvetica Neue LT 75 Bold.ttf")
@@ -78,7 +78,7 @@
 //@font-face {
 //  font-family: "Helvetica Neue";
 //  font-weight: 900;
-//  font-display: swap;
+//  font-display: fallback;
 //  src: url("../public/fonts/helvetica/Helvetica Neue LT 97 Black Condensed.ttf")
 //      format("truetype"),
 //    url("../public/fonts/helvetica/Helvetica Neue LT 97 Black Condensed.ttf")
