--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -174,12 +174,12 @@ button {
   }
 }
 .btn-yellow {
-  @apply bg-yellow-500 text-gray-900;
+  @apply bg-yellow-600 text-gray-900;
   &:hover {
-    @apply bg-yellow-600;
+    @apply bg-yellow-700;
   }
   &:active {
-    @apply bg-yellow-700;
+    @apply bg-yellow-800;
   }
   &.disabled, &:disabled {
     @apply bg-yellow-100;
@@ -292,18 +292,18 @@ button {
 
 // Form
 .required {
-  @apply relative;
-  &:after {
+  @apply relative pl-2;
+  &:before {
     content: '*';
-    @apply absolute top-0 text-rose-500 ml-1
+    @apply absolute top-0 left-0 text-rose-500
   }
 }
 
 .form-label {
-  @apply text-gray-300 text-sm
+  @apply inline-flex text-gray-300 text-sm mb-1.5
 }
 .form-field {
-  @apply block w-full py-2 px-3 mt-1 bg-transparent text-gray-50 border-2 border-solid border-gray-600 rounded-lg transition placeholder-gray-500 focus:bg-gray-900 hover:border-gray-500 focus:outline-none;
+  @apply block w-full py-2 px-3 bg-transparent text-gray-50 border-2 border-solid border-gray-600 rounded-lg transition placeholder-gray-500 focus:bg-gray-900 hover:border-gray-500 focus:outline-none;
   &.is-placeholder {
     @apply text-gray-400
   }
@@ -365,38 +365,3 @@ textarea.form-field {
 .tickets-cover__qrcode {
   @apply flex items-center justify-center sm:w-1/3 sm:h-full px-5 sm:pl-5 sm:pr-7 pb-5 pt-4 sm:py-0;
 }
-
-
-// text Editor
-
-.tox .tox-menubar {
-  background-color: #121212 !important;
-}
-
-.tox .tox-mbtn {
-  color: white !important;
-
-}
-
-.tox-tinymce {
-  border-radius: 0.5rem !important;
-  border-color: rgb(69 69 69) !important;
-  border-width: 2px !important;
-  margin-top: 0.25rem;
-}
-.tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary{
-  background-color: #121212 !important;
-}
-.tox .tox-tbtn svg {
-  fill: white !important;
-}
-
-.tox .tox-statusbar {
-  color: white !important;
-  background-color: #121212 !important;
-}
-
-// .tox .tox-edit-area__iframe {
-//   background-color: #121212 !important;
-//   color: white !important;
-// }
