--- a/apps/happin-web/styles/plugins.scss
+++ b/apps/happin-web/styles/plugins.scss
@@ -42,8 +42,8 @@
   top: 0;
   left: 0;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  //margin-left: auto;
+  //margin-right: auto;
 }
 
 .slick-track:before,
