--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -286,12 +286,6 @@
     @apply text-xl md:text-3xl font-semibold text-gray-50 mb-5 md:mb-6 mt-10 md:mt-14 scroll-mt-20 md:scroll-mt-24;
   }
   p {
-    @apply mb-1.5 md:mb-2 text-base md:text-lg text-gray-300 font-medium;
+    @apply mb-1.5 md:mb-2 text-base md:text-lg text-gray-300;
   }
 }
-//:target {
-//  display: block;
-//  position: relative;
-//  top: -120px;
-//  visibility: hidden;
-//}
