--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -45,6 +45,9 @@
       @apply h-auto;
     }
   }
+  &.community-page {
+    background-color: #fff;
+  }
 }
 .header {
   @apply relative z-10;
@@ -287,5 +290,61 @@
   }
   p {
     @apply mb-1.5 md:mb-2 text-base md:text-lg text-gray-300;
+  }
+}
+
+
+@-webkit-keyframes skeleton-glow{
+  from{
+    background:rgba(211, 216, 222, 0.2);
+    border-color:rgba(211, 216, 222, 0.2);
+  }
+  to{
+    background:rgba(95, 107, 124, 0.2);
+    border-color:rgba(95, 107, 124, 0.2);
+  }
+}
+@keyframes skeleton-glow{
+  from{
+    background:rgba(211, 216, 222, 0.2);
+    border-color:rgba(211, 216, 222, 0.2);
+  }
+  to{
+    background:rgba(95, 107, 124, 0.2);
+    border-color:rgba(95, 107, 124, 0.2);
+  }
+}
+.skeleton{
+  animation: 1000ms linear infinite alternate skeleton-glow;
+  background: rgba(211, 216, 222, 0.2);
+  background-clip: padding-box !important;
+  border-color: rgba(211, 216, 222, 0.2) !important;
+  border-radius: 3px;
+  box-shadow: none !important;
+  color: transparent !important;
+  cursor: default;
+  pointer-events: none;
+  user-select: none;
+}
+.skeleton::before, .skeleton::after,
+.skeleton *{
+  visibility:hidden !important;
+}
+.img-skeleton {
+  position: relative;
+  overflow: hidden;
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    animation: 1000ms linear infinite alternate skeleton-glow;
+    background: rgba(211, 216, 222, 0.2);
+    cursor: default;
+    pointer-events: none;
+    user-select: none;
   }
 }
